# async-oneshot-local

./: Cargo.toml  README.md
benches/: bench.rs
src/: inner.rs  lib.rs  receiver.rs  sender.rs
tests/: test.rs
